--- a/Day1/2. object.html
+++ b/Day1/2. object.html
@@ -53,7 +53,16 @@
         console.log("name" in obj2)
         console.log("age" in obj2)
 
+        // 对象字面量  key 可以加引号  也可以不加  建议不加
+        var obj = {
+            name : "ax",
+            "age": 18
+        }
+        console.log(obj.name)
+        console.log(obj["age"])
 
+
+        
     </script>
 </head>
 <body>
