--- a/Day1/5.Array.html
+++ b/Day1/5.Array.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <script type = "text/javascript">
 
+    //1. 基础 
     var arr = new Array();
     console.log(typeof arr); // "object"类型
     console.log(arr[0]); //超界 -->undefined
@@ -19,6 +20,31 @@
     arr = ["hello",1, {name:"123"}, true, function(){}, [123]] //匿名函数  数组里面也可以放数组
 
 
+    //2. Apis
+    //push 末尾 添加 1个or 多个元素， 并返回新的长度
+
+    var arr= [];
+
+    //push 末尾 添加 1个or 多个元素， 并返回新的长度
+    console.log(arr.push(1,2,3)) // 返回3
+    console.log(arr) // [1,2,3]
+
+    //pop ： 删除并返回 数组最后一个元素
+    console.log(arr.pop()) // 返回3
+    console.log(arr.pop()) // 2
+    console.log(arr.pop()) // 1
+    console.log(arr.pop()) // undefined
+
+
+    // unshift : 向数组开头添加 1个or 多个element， 并返回新的长度
+    // 原索引会依此调整
+    arr.push(1,2,3)
+    console.log(arr.unshift(4,5,6)) //6
+    console.log(arr) // [4,5,6,1,2,3]  
+
+    // shift : 删除数组第一个元素， 并将第一个元素返回
+    console.log(arr.shift()) //4 
+    console.log(arr.shift()) //5
 
 
 
